# anyMidi

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  _audio_processor_8cpp.html  _audio_processor_8h.html  _audio_processor_8h_source.html  _custom_look_and_feel_8cpp.html  _custom_look_and_feel_8h.html  _custom_look_and_feel_8h_source.html  _forward_f_f_t_8cpp.html  _forward_f_f_t_8h.html  _forward_f_f_t_8h_source.html  _globals_8h.html  _globals_8h_source.html  _main_8cpp.html  _main_component_8cpp.html  _main_component_8h.html  _main_component_8h_source.html  _midi_processor_8cpp.html  _midi_processor_8h.html  _midi_processor_8h_source.html  _user_interface_8cpp.html  _user_interface_8h.html  _user_interface_8h_source.html  annotated.html  anyMidiStandalone.jucer  class_any_midi_standalone_application-members.html  class_any_midi_standalone_application.html  class_any_midi_standalone_application_1_1_main_window-members.html  class_any_midi_standalone_application_1_1_main_window.html  class_custom_looka_and_feel.html  classany_midi_1_1_app_settings_page-members.html  classany_midi_1_1_app_settings_page.html  classany_midi_1_1_audio_device_manager_r_c_o-members.html  classany_midi_1_1_audio_device_manager_r_c_o.html  classany_midi_1_1_audio_processor-members.html  classany_midi_1_1_audio_processor.html  (+39 more)
.github/workflows/: action.yml  ci.yml  clang-format.yml  doxygen.yml
Source/: AudioProcessor.cpp  AudioProcessor.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  ForwardFFT.cpp  ForwardFFT.h  Globals.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiProcessor.cpp  MidiProcessor.h  UserInterface.cpp  UserInterface.h  appGUI.cpp  appGUI.h
doxygen/: Doxyfile
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+10 more)
source/: Main.cpp
source/core/: AudioProcessor.cpp  AudioProcessor.h  ForwardFFT.cpp  ForwardFFT.h  MidiProcessor.cpp  MidiProcessor.h
source/ui/: CustomLookAndFeel.cpp  MainComponent.cpp  MainComponent.h  UserInterface.cpp  UserInterface.h
source/util/: Globals.h
src/: Main.cpp
src/core/: AudioProcessor.cpp  AudioProcessor.h  ForwardFFT.cpp  ForwardFFT.h  MidiProcessor.cpp  MidiProcessor.h
src/ui/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  MainComponent.cpp  MainComponent.h  UserInterface.cpp  UserInterface.h
src/util/: Globals.h
